--- a/www-source/package.json
+++ b/www-source/package.json
@@ -13,6 +13,7 @@
   "author": "Yosiya Hinosawa",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-jekyll": "~0.3.9"
   }
 }
