--- a/www-source/bower.json
+++ b/www-source/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "straw-android.js": "git@github.com:kt3k/straw-android.js.git"
   }
 }
