--- a/www-source/bower.json
+++ b/www-source/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery": "~2.0.3",
-    "straw-android.js": "git@github.com:kt3k/straw-android.js.git"
+    "straw-android.js": "git@github.com:kt3k/straw-android.js.git",
+    "straw-android-plugin.js": "git@github.com:kt3k/straw-android-plugin.js.git"
   }
 }
