--- a/www-source/package.json
+++ b/www-source/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-jekyll": "~0.3.9"
+    "grunt-jekyll": "~0.3.9",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
