Fix bootstrap dependency

--- a/www-source/bower.json
+++ b/www-source/bower.json
@@ -19,6 +19,6 @@
     "jquery": "~2.0.3",
     "straw-android.js": "git@github.com:kt3k/straw-android.js.git",
     "straw-android-plugin.js": "git@github.com:kt3k/straw-android-plugin.js.git",
-    "bootstrap": "~3.0.0"
+    "bootstrap.zip": "http://getbootstrap.com/2.3.2/assets/bootstrap.zip"
   }
 }
