--- a/www-source/package.json
+++ b/www-source/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-jekyll": "~0.3.9",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jasmine": "~0.5.2"
   }
 }
