--- a/www-source/package.json
+++ b/www-source/package.json
@@ -16,6 +16,7 @@
     "grunt": "~0.4.1",
     "grunt-jekyll": "~0.3.9",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-jasmine": "~0.5.2"
   }
 }
