--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'eclipse'
+apply plugin: 'android'
+apply plugin: 'idea'
 
 repositories {
     mavenCentral()
@@ -21,8 +23,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.5.6'
     }
 }
-
-apply plugin: 'android'
 
 tasks.withType(Compile) {
     options.encoding = 'UTF-8'
