--- a/www-source/bower.json
+++ b/www-source/bower.json
@@ -17,8 +17,8 @@
   ],
   "devDependencies": {
     "jquery": "~2.0.3",
-    "straw-android.js": "git@github.com:kt3k/straw-android.js.git",
-    "straw-android-plugin.js": "git@github.com:kt3k/straw-android-plugin.js.git",
+    "straw-android.js": "git@github.com:strawjs/straw-android.js.git#v0.1.0",
+    "straw-android-plugin.js": "git@github.com:strawjs/straw-android-plugin.js.git#v0.0.1",
     "bootstrap.zip": "http://getbootstrap.com/2.3.2/assets/bootstrap.zip"
   }
 }
