--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,10 @@ tasks.withType(Compile) {
 
 dependencies {
     compile files('libs/GoogleAdMobAdsSdk-4.3.1.jar')
-    compile group: 'org.kt3k.straw', name: 'straw', version: '0.1.6', {
+    compile group: 'org.kt3k.straw', name: 'straw-android', version: '0.2.1', {
         exclude group: 'com.google.android'
     }
-    compile group: 'org.kt3k.straw', name: 'straw-plugin', version: '0.0.8', {
+    compile group: 'org.kt3k.straw', name: 'straw-android-plugin', version: '0.2.2', {
         exclude group: 'com.google.android'
     }
 }
