--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,12 @@ tasks.withType(Compile) {
 
 dependencies {
     compile files('libs/GoogleAdMobAdsSdk-4.3.1.jar')
-    compile group: 'org.kt3k.straw', name: 'straw-android', version: '0.2.1', {
+
+    compile 'org.kt3k.straw:straw-android:0.2.1', {
         exclude group: 'com.google.android'
     }
-    compile group: 'org.kt3k.straw', name: 'straw-android-plugin', version: '0.2.2', {
+
+    compile 'org.kt3k.straw:straw-android-plugin:0.2.2', {
         exclude group: 'com.google.android'
     }
 }
