--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery": "~2.0.3",
+    "bootstrap": "~3.0.2",
     "straw-android.js": "git://github.com/strawjs/straw-android.js.git#v0.1.5",
     "straw-android-plugin.js": "git://github.com/strawjs/straw-android-plugin.js.git#v0.0.2"
   }
