--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "~2.0.3",
     "bootstrap": "~3.0.2",
     "straw-android.js": "git://github.com/strawjs/straw-android.js.git#v0.1.5",
-    "straw-android-plugin.js": "git://github.com/strawjs/straw-android-plugin.js.git#v0.0.2"
+    "straw-android-plugin.js": "git://github.com/strawjs/straw-android-plugin.js.git#v0.0.2",
+    "font-awesome-4.0.3.zip": "http://fontawesome.io/assets/font-awesome-4.0.3.zip"
   }
 }
