--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_script:
 
 after_success:
 - npm install -g jscoverage
-- jscoverage src/main/js src/main/js-cov
+- jscoverage app/src app/src-cov
 - grunt jasmine:app-cov | node_modules/jasmine-jscoverage-reporter/convert-to-coveralls.js | curl -F "json_file=@-" https://coveralls.io/api/v1/jobs
