--- a/bower.json
+++ b/bower.json
@@ -18,13 +18,13 @@
   "dependencies": {
     "jquery": "~2.0.3",
     "bootstrap": "~3.0.2",
-    "straw-android.js": "git://github.com/strawjs/straw-android.js.git#v0.2.0",
-    "straw-android-plugin.js": "git://github.com/strawjs/straw-android-plugin.js.git#v0.2.0",
-    "font-awesome-4.0.3.zip": "http://fontawesome.io/assets/font-awesome-4.1.0.zip",
     "underscore": "~1.6.0",
+    "es6-promise": "~1.0.0",
     "flag-sprite": "git://github.com/kt3k/flag-sprite#0.2.0",
     "t10": "~0.1.0",
-    "es6-promise": "~1.0.0"
+    "straw-android": "~0.2.0",
+    "straw-android-plugin.js": "git://github.com/strawjs/straw-android-plugin.js.git#v0.2.0",
+    "font-awesome-4.0.3.zip": "http://fontawesome.io/assets/font-awesome-4.1.0.zip"
   },
   "devDependencies": {
     "sinon-1.7.3.js": "http://sinonjs.org/releases/sinon-1.7.3.js"
