--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,14 @@
-language: java
+language: android
+
+android:
+  components:
+    - build-tools-19.1.0
+    - android-19
+    - sys-img-armeabi-v7a-android-19
+
+before_script:
+  # Emulator Management: Create, Start and Wait
+  - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
