--- a/.gitignore
+++ b/.gitignore
@@ -18,12 +18,9 @@ src/main/assets
 # android generated dir
 src/main/gen
 
-# local android sdk setting file (needed for IntelliJ)
+# local android sdk setting file (necessary for IntelliJ)
 # its content is like "sdk.dir=/Application/android-sdk-macosx"
 local.properties
-
-# npm modules
-node_modules
 
 # bower components
 bower_components
